# personal-knowledge-base-os

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  smoke_db.py
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py
apps/api/src/: chat.py  config.py  db.py  embeddings.py  engine.py  errors.py  graph.py  indexer.py  main.py  models.py  search.py  store.py  worker.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/components/: CitationCard.tsx  DemoBadge.tsx  ErrorBoundary.tsx  GraphCanvas.tsx  NavBar.tsx  NoteMarkdown.tsx  NoteView.tsx  ScoreBadge.tsx  SearchResultCard.tsx  States.tsx  TagPill.tsx
apps/web/src/lib/: api.ts  mockData.ts
apps/web/src/types/: index.ts
demo_vault/: backlinks_graph.md  chat_with_citations.md  embeddings.md  getting_started.md  local_first.md  notes_architecture.md  search_tips.md  semantic_search.md  wikilinks.md  writing_style.md
docs/: EXECUTION_PLAN.md  architecture.md  design-decisions.md  failure-modes.md  implementation_plan.md  roadmap.md  security.md
examples/: run_demo.py
tests/: conftest.py  test_api.py  test_chat.py  test_core.py  test_embeddings.py  test_engine.py  test_golden.py  test_graph.py  test_indexer.py  test_persistence.py  test_search.py  test_worker.py
(+15 files in other folders)
